Correct margins on mobile for entry lists and archive headers.  This commit also adds a wrapper `<div>` for entry lists and gives a more flexible structure for styling.

--- a/resources/scss/components/_archive-header.scss
+++ b/resources/scss/components/_archive-header.scss
@@ -11,9 +11,14 @@
 	text-align: center;
 
 	> * {
-		max-width:    $content-width;
-		margin-left:  auto;
-		margin-right: auto;
+		margin-left:  $spacing-global;
+		margin-right: $spacing-global;
+
+		@media ( min-width: calc( #{ $content-width } + 64px ) ) {
+			max-width:    $content-width;
+			margin-left:  auto;
+			margin-right: auto;
+		}
 	}
 
 	&__title {
