--- a/resources/scss/components/_entry-list.scss
+++ b/resources/scss/components/_entry-list.scss
@@ -1,7 +1,12 @@
 
 
 .entry-list {
-	max-width:    $content-width;
-	margin-left:  auto;
-	margin-right: auto;
+	margin-left:  $spacing-global;
+	margin-right: $spacing-global;
+
+	@media ( min-width: calc( #{ $content-width } + 64px ) ) {
+		max-width:    $content-width;
+		margin-left:  auto;
+		margin-right: auto;
+	}
 }
